# chess_arm

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: chess_arm_ci.yml
lib/: arm.cppm  board.cppm  camera.cppm  chess_library.cppm  doctest.h  doctest.hpp  engine.cppm  path.cppm  quaternion.cppm  streamer.cppm  trajectory.cppm
server/: package-lock.json  package.json  server.js
server/res/: connect.js  index.html
src/: arm.cpp  arm.rs  board.cpp  camera.cpp  camera.rs  checkpoint.rs  easywsclient.cpp  engine.cpp  engine.rs  main.cpp  main.rs  path.cpp  quaternion.cpp  stream.rs  streamer.cpp  trajectory.cpp
stream_client/: index.html
